@@ -2,6 +2,7 @@
 ==========================
 
 - Popdown the picker and unselect the grid on pausing
+- Track keyboard input for focus handling with a 5 seconds timeout
 
 49.alpha - June 27, 2025
 ==========================
